src/objects/RPL_List__c.object
<CustomObject>
    <fields>
        <fullName>Dev_ValidateType__c</fullName>
        <description>Develop  Field</description>
        <inlineHelpText>Develop  Field</inlineHelpText>
        <label>Dev ValidateType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Examples__c</fullName>
        <label>Examples</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keyword1__c</fullName>
        <label>Keyword1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword2__c</fullName>
        <label>Keyword2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword3__c</fullName>
        <label>Keyword3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RPL List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Examples__c</columns>
        <columns>Keyword1__c</columns>
        <columns>Keyword2__c</columns>
        <columns>Keyword3__c</columns>
        <columns>Keyword4__c</columns>
        <columns>Keyword5__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>RPL-{000000000}</displayFormat>
        <label>RPL List No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>